ubah dan hapus wisata

--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -16,9 +16,8 @@ body {
 }
 
 .table_wisata {
-    display: block;
     overflow-x: auto;
-    white-space: nowrap;
+    width: 100%;
 }
 
 #wrapper {
