--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -16,8 +16,9 @@ body {
 }
 
 .table_wisata {
+    display: block;
     overflow-x: auto;
-    width: 100%;
+    white-space: nowrap;
 }
 
 #wrapper {
